# sap-project

dataguard/: README.md  app.py  generate_sample.py  pyproject.toml  requirements.txt
dataguard/data/: sample_orders.csv
dataguard/data/warehouse/: dataguard.db
dataguard/src/dataguard/: __init__.py  anomaly_detector.py  cli.py  config.py  database.py  pipeline.py  quality_checks.py
dataguard/tests/: test_anomaly_detector.py  test_quality_checks.py
