[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataguard"
version = "0.1.0"
description = "Automated Data Quality & Anomaly Detection Pipeline"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.25.0",
    "plotly>=5.0.0",
    "click>=8.0.0"
]

[project.scripts]
dataguard = "dataguard.cli:main"
